add : sign option
created login and register page for users
create files : sign html / sign css / sign js

--- a/project_2024/index.html
+++ b/project_2024/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="homebody">
-  
+  <!--navigation bar -->
       <div class="nav">
         <ul>
           <li><a href="">Home</a></li>
