add : seller register alter : index html

--- a/project_2024/index.html
+++ b/project_2024/index.html
@@ -39,12 +39,12 @@
         <div class="seller_pick">
           <h2>Seller</h2>
           <p>if you looking for post items on E-commerce <br>we looking for you </p>
-          <button>explore more </button>
+          <button id="s-btn" onclick="reg_seller()">explore more </button>
         </div>
         <div class="buyer_pick">
           <h2>Buyer</h2>
           <p>if you looking for buy items from comsumers <br>we looking for you </p>
-          <button>explore more </button>
+          <button id="s-btn" onclick="reg_buyer()">explore more </button>
         </div>
       </div>
 
@@ -75,5 +75,7 @@
         </div>
       </footer>  
   </div>
+  <script src="index.js">
+  </script>
 </body>
 </html>
