--- a/project_2024/sign.html
+++ b/project_2024/sign.html
@@ -33,7 +33,7 @@
                     <label for="fname">User name</label>
                     <input type="text" class="input" required>
                     <label for="fname">password</label>
-                    <input type="text" class="input" required>
+                    <input type="password" class="input" required>
                     <button type="submit"> Log in </button>
                     <div id="err_alert"></div>
                     <p>
