--- a/project_2024/seller_reg.html
+++ b/project_2024/seller_reg.html
@@ -43,7 +43,7 @@
         </div>
         <div class="col_2">
             <div class="col_2_reg" id="div1">
-                <form action="###############">
+                <form action="/register" method="post">
                     <label for="name">Name</label>
                     <input type="text" name="name" id="name" required>
                     <label for="email">Email</label>
@@ -64,28 +64,50 @@
                 </form>
             </div>
             <div class="col_2_log" id="div2">
-                <form action="##############">
-                    <label for="">Email</label>
-                    <input type="text" name="" id="" required>
-                    <label for="">password</label>
-                    <input type="password" name="" id="" required>
+                <form action="/login" method="post" onsubmit="submitLoginForm(event)">
+                    <label for="login_email">Email</label>
+                    <input type="text" name="login_email" id="login_email" required>
+                    <label for="login_password">password</label>
+                    <input type="password" name="login_password" id="login_password" required>
                     <button>submit</button>
                 </form>
             </div>
       </div>
       <script>
-       function showloginform(){
-        document.getElementById('div1').style.display = 'none';
-        document.getElementById('div2').style.display = 'block';
-        var btn_login = document.getElementById('btn');
-        btn_login.innerHTML = 'seller register';
-    }
-    function showregisterform(){
-        document.getElementById('div2').style.display = 'none';
-        document.getElementById('div1').style.display = 'block';
-        var btn_login = document.getElementById('btn');
-        btn_login.innerHTML = 'Seller login';
-    }
-      </script>
+        function showloginform() {
+            document.getElementById('div1').style.display = 'none';
+            document.getElementById('div2').style.display = 'block';
+            var btn_login = document.getElementById('btn');
+            btn_login.innerHTML = 'seller register';
+        }
+    
+        function showregisterform() {
+            document.getElementById('div2').style.display = 'none';
+            document.getElementById('div1').style.display = 'block';
+            var btn_login = document.getElementById('btn');
+            btn_login.innerHTML = 'Seller login';
+        }
+    
+        // Function to handle login form submission
+        function submitLoginForm(event) {
+            event.preventDefault(); 
+            var form = event.target; // Get the form element
+            var formData = new FormData(form); 
+            fetch('/login', { // Send POST request to /login route
+                method: 'POST',
+                body: formData
+            }).then(response => {
+                if (response.ok) {
+                    return response.text(); // If response is successful, return response text
+                } else {
+                    throw new Error('Login failed'); 
+                }
+            }).then(data => {
+                alert(data); // Display the response message
+            }).catch(error => {
+                console.error('Login failed:', error); 
+            });
+        }
+    </script>
 </body>
 </html>
